# ccstructs

./: .gitignore  .travis.yml  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac
doc/: ccstructs.texi  macros.texi  overview-linking.texi
examples/: alpha-body.c  alpha-header.h  alpha.c  ccnames-iface-struct-no-methods.c  ccnames-iface-struct-with-methods.c  ccnames-struct-common-no-methods.c  ccnames-struct-common-with-methods.c  dtor-no-methods.c  dtor-no-methods.h  dtor-with-methods-and-names.c  dtor-with-methods-and-names.h  dtor-with-methods.c  dtor-with-methods.h  dtors-no-methods.c  dtors-no-methods.h  dtors-with-methods.c  dtors-with-methods.h  printable-interface.h  printable-trait.h  struct-no-methods.c  struct-no-methods.h  struct-with-methods.c  struct-with-methods.h  test-dtor-no-methods.c  test-dtor-with-methods-and-names.c  test-dtor-with-methods.c  test-dtors-no-methods.c  test-dtors-with-methods.c  test-struct-no-methods.c  test-struct-with-methods.c
meta/scripts/: ccstructs.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-ccexceptions.sh  install-ccmemory.sh  install-cctests.sh
src/: ccnames.h  ccstructs-exception-handlers.c  ccstructs-internals.h  ccstructs-pathname-representation.c  ccstructs-pathname.c  ccstructs-version.c  ccstructs.h
tests/: destructors-interface.c  dtor-interface.c  dtor-trait.c  dtors-interface.c  dumpable-interface.c  dumpable-trait.c  exception-handlers.c  pathname-interface.c  pathname-representation.c  pathname-trait.c  serialisable-interface.c  serialisable-trait.c  version.c  writable-interface.c
